# Magium-SDL

./: README.md
com.Magium.Magium/app/jni/src/: Android.mk  CMakeLists.txt  Makefile  android.bat  android.sh  compile_commands.json  garbage.hpp  main.cpp
com.Magium.Magium/app/jni/src/.cache/clangd/index/: button.hpp.5E584C01C96A822D.idx  data_view.hpp.A04697CBD820E35C.idx  helper.hpp.2B72B7920D006234.idx  helper.hpp.DD1053CB7C4484E1.idx  image.hpp.809DA33C5200007B.idx  image.hpp.C48FA3C0E666BBC5.idx  magium_data.hpp.5C3C5A012F3AA010.idx  magium_data.hpp.F5F846A538A8162D.idx  magium_decoder.cpp.7B61F5730F5F9689.idx  magium_decoder.cpp.C4FC583B3C7A9E6B.idx  magium_decoder.hpp.083C8B47095EF214.idx  magium_decoder.hpp.29540DE0765E8D98.idx  magium_stat.hpp.8F8797701A89A56E.idx  magium_stat.hpp.FB99541D52F74D7B.idx  magium_structs.hpp.86AFFBD60EA338F7.idx  main.cpp.1779F7BF17CF296E.idx  main.cpp.1B67740AE07BB219.idx  parser.hpp.70F71F624D4A1617.idx  utility.hpp.E7DBE575ACE43903.idx  (+17 more)
com.Magium.Magium/app/jni/src/src/: app.cpp  app.hpp  button.cpp  button.hpp  clock.hpp  main.cpp  values.hpp
com.Magium.Magium/app/jni/src/src/helper/: helper.hpp  stopwatch.hpp
com.Magium.Magium/app/jni/src/src/parser/: data_view.cpp  data_view.hpp  magium_data.hpp  magium_decoder.cpp  magium_decoder.hpp  magium_structs.hpp  parser.cpp  parser.hpp  parser_utility.hpp  persister.cpp  persister.hpp  utility.hpp
com.Magium.Magium/app/jni/src/src/ui/: button.hpp  image.hpp  magium_stat.hpp  raw_image.hpp  raw_text.hpp  scroller.hpp  slots_scene.hpp  ui_element.hpp  ui_scene.cpp  ui_scene.hpp
(+1951 files in other folders)
